# semgrep

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  devShell.nix  dune-project  flake.nix  metrics.md  release_changes.md  semgrep.jsonnet  semgrep.nix  semgrep.opam  setup.py
.github/workflows/: Makefile  build-test-core-x86.yml  build-test-docker.jsonnet  build-test-docker.yml  build-test-manylinux-aarch64.jsonnet  build-test-manylinux-aarch64.yml  build-test-manylinux-x86.yml  build-test-osx-arm64.jsonnet  lint.jsonnet  (+20 more)
TCB/: Cap.ml  Cap.mli  TCB.ml  dune  forbid_console.jsonnet  forbid_everything.jsonnet  forbid_fs.jsonnet
changelog.d/: SC-1858.added  SC-1991.added  SC-2026.changed  alpine-version.changed  code-7626.added  code-7891.fixed  code-7963.fixed  code-7966.fixed  code-7967.fixed  code-7976.fixed  code-7987.fixed  code-8054.fixed  experimental.fixed  gh-10687.fixed  gh-10731.added  gh-2955.fixed  gh-2999.added  metadata-filter.changed  ocaml5-docker.infra  parsing.changed  python-version.changed  saf-1737.fixed  saf-1746.fixed  saf-1774.changed  saf-1776.fixed  saf-1778.fixed  saf-1802.fixed  saf-1810.fixed  saf-333.fixed  sc-1996.fixed  sc-2015.added  sc-2032.fixed  sc-2033.fixed  sc-2045.added  sc-2052.fixed  sc-2054.changed  sc-2060.fixed  sc-2069.added  sms-521.fixed  ssc-1970.added  (+1 more)
cli/: Makefile  setup.py
dev/: optional.opam
interfaces/: Rule_options.atd
libs/ast_generic/: AST_generic.ml  AST_generic_helpers.ml  AST_generic_to_v1.ml  Meta_AST.ml  dune
scripts/: build-static-libcurl.sh  run-core-test
(+399 files in other folders)
